--- a/arch/arm/configs/cyanogenmod_galaxysmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_galaxysmtd_defconfig
@@ -1,4 +1,6 @@
 CONFIG_EXPERIMENTAL=y
+CONFIG_LOCALVERSION="-osarmod"
+CONFIG_LOCALVERSION_AUTO=y
 CONFIG_KERNEL_LZMA=y
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
